Fix video iframe sizing on mobile

--- a/src/styles/entry.module.css
+++ b/src/styles/entry.module.css
@@ -16,7 +16,8 @@
   text-align: left;
 }
 
-.entry img {
+.entry img,
+iframe {
   width: 100%;
 }
 
